--- a/rent-our-space.html
+++ b/rent-our-space.html
@@ -114,8 +114,11 @@
             <h2 class="title">Rent Our Space</h2>
         </div>
         <section class="season-desc">
-            <div class="desc-wrapper">
-                <h4 class="text-center">Looking for a party venue?</h4>
+            <div class="desc-wrapper text-center">
+                <div class="pb-5">
+                    <img src="images/sunflower-logo-full-color-rgb.png">
+                </div>
+                <h4>Looking for a party venue?</h4>
                 <p class="contact-pages">
                     Party Reservations are available after-hours from: 5:30pm-9:00pm.
                 </p>
@@ -126,7 +129,6 @@
                             placeholder="Email">
                             <input type="tel" class="phone" id="phone" name="phone" placeholder="Phone number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
                             required>
-                        <small>Format: 123-456-7890</small>
                         <textarea class="content" placeholder="Please enter details of requested party..."></textarea>
                         <div class="name" style="background-color:transparent;">
                             <button type="submit" value="Submit" />Submit</button>
