--- a/join-our-team.html
+++ b/join-our-team.html
@@ -81,16 +81,20 @@
             <h2 class="title">Join Our Team</h2>
         </div>
         <section class="season-desc">
-            <div class="desc-wrapper">
-
+            <div class="desc-wrapper text-center">
+                <div class="pb-5">
+                    <img src="images/sunflower-logo-full-color-rgb.png">
+                </div>
+                <p>
+                    Please fill out the form below if you are interested in joining the Sunflower team!
+                </p>
                 <div class="message1">
                     <form action="post">
                         <input type="text" class="name" id="name" name="name" placeholder="Full name">
                         <input type="email" class="name" id="email" name="password"
                             placeholder="Email">
-                        <input type="tel" class="phone" id="phone" name="phone" placeholder="Phone number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                        <input type="tel" class="phone" id="phone" name="phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
                             required>
-                        <small>Format: 123-456-7890</small>
                         <textarea class="content1" placeholder="What position you would like to apply for?"></textarea>
                         <textarea class="content"
                             placeholder="Tell us a bit about yourself and what you are looking for in a job..."></textarea>
