--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
   <!-- nav -->
   <link href="https://fonts.googleapis.com/css?family=Average+Sans&display=swap" rel="stylesheet">
 
@@ -162,8 +163,8 @@
   <!-- menu replacing buttons -->
 
   <div id="button-background">
-    <button class="button active1" id="eat-button" onclick="show('eat-menu')">Eat</button>
-    <button class="button" id="drink-button" onclick="show('drink-menu')">Drink</button>
+    <button class="button active1" id="eat-button" onclick="show('eat-menu')">EAT</button>
+    <button class="button" id="drink-button" onclick="show('drink-menu')">DRiNK</button>
   </div>
 
   <!-- menu replacing -->
