--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                     <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                    <a class="nav-link" href="#menus">Eat + Drink</a>
+                    <a class="nav-link" href="?dummy=$2#menus">Eat + Drink</a>
                   </li>
                   <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                    <a class="nav-link" href="#gallery">Gallery</a>
+                    <a class="nav-link" href="?dummy=$3#gallery">Gallery</a>
                   </li>
                   <li class="nav-item pl-4 pl-md-0 ml-0">
                   </li>
